<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ScrollView>
        <LinearLayout
            android:id="@+id/all_order"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/your_order"/>

            <TextView
                android:id="@+id/donut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/ice_cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/froyo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>


        </LinearLayout>



        <TextView
            android:id="@+id/order_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/order_label_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="140dp"
            android:text="@string/name_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_textview" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            app:layout_constraintStart_toEndOf="@+id/name_label" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:text="@string/address_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <EditText
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_address_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
            app:layout_constraintStart_toEndOf="@+id/address_label" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/phone_label_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_text" />

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_phone_hint"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
            app:layout_constraintStart_toEndOf="@+id/phone_label" />

        <TextView
            android:id="@+id/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_text" />

        <EditText
            android:id="@+id/note_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="204dp"

            android:ems="10"
            android:hint="@string/enter_note_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/note_label"
            app:layout_constraintTop_toBottomOf="@+id/phone_text" />

        <TextView
            android:id="@+id/delivery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="112dp"
            android:text="@string/choose_delivery_method"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_text"
            tools:ignore="UnknownId" />

        <TextView
            android:id="@+id/kota_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="Kota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_text" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery_label">

            <RadioButton
                android:id="@+id/sameday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/same_day_messenger_service" />

            <RadioButton
                android:id="@+id/nextday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/next_day_ground_delivery" />

            <RadioButton
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="288dp"
            android:layout_height="18dp"
            android:layout_marginBottom="68dp"
            app:layout_constraintBottom_toTopOf="@+id/delivery_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/kota_label"
            app:layout_constraintTop_toBottomOf="@+id/note_text"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
